# mini-os

./: .envrc  .gitignore  flake.nix  rust-toolchain.toml
mini-os/: Cargo.toml  step.md
mini-os/.cargo/: config.toml
mini-os/axlog/src/: lib.rs
mini-os/axstd/src/: lib.rs
mini-os/example_now/: Cargo.toml
mini-os/example_now/src/: main.rs
os-me/: Cargo.toml  step.md
os-me/axhal/: Cargo.toml  linker.ld
os-me/axhal/src/: lib.rs
os-me/axlog/: Cargo.toml
os-me/axlog/src/: lib.rs
os-me/axstd/: Cargo.toml
os-me/example_now/: Cargo.toml
os-me/example_now/src/: main.rs
os-me/src/: main.rs
